# sp_top_10_downloads_on_Odesi

./: .coveragerc  .gitignore  .gitlab-ci.yml  Dockerfile  Flask_app.py  Makefile  MariaDB [sp_odesi_practice]> show tables  README.md  README.rst  app.py  connect_to_db.py  docker-compose.yaml  docker-compose.yml  docker-entrypoint.sh  downloads.json  odesi_queries.py  pyproject.toml  pytest.ini  query_helper.py  requirements.txt  secrets_example.json  sp_utils.py  tasks.todo  test-requirements.txt  todo.todo  top_downloads.py
demo/: index.html
odesi/: odesi_queries.py  query_helper.py  sp_utils.py
odesi_report_top_10_downloads/: __init__.py
tests/: test_odesi_report.py  test_odesi_report_top_10_downloads.py
