[tool.poetry]
name = "odesi_report_top_10_downloads"
version = "0.1.0"
description = ""
authors = ["Guinsly Mondesir <guinslym@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
feedgen = "^0.9.0"
pymysql = "^0.9.3"
flask = "^2.2.5"
pytest-sugar = "^0.9.3"
dateparser = "^0.7.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ptpython = "^3.0.2"
pdbpp = "^0.10.2"
profilehooks = "^1.11.2"
pytest-sugar = "^0.9.3"
freezegun = "^0.3.15"
coverage = {version = "^5.0", extras = ["toml"]}
black = "^19.10b0"

[tool.coverage.run]
branch = true
include = ["odesi/*"]
omit = [
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = []


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
